--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@aws-cdk/aws-chatbot": "1.47.0",
+    "@aws-cdk/aws-iam": "1.47.0",
     "@aws-cdk/core": "1.47.0"
   }
 }
